# ArrayBot

./: .gitignore  AllApps.groupproj  AllAppsNoDSLLibs.groupproj  ArrayBot Controls v1.docx  ArrayBotGroup.groupproj  CHANGELOG.txt  CMakeLists.txt  Doxyfile  INSTALL.txt  LICENSE.txt  NOTICE.txt  README.txt  Sketches.pptx  SmallArrayBotGroup.groupproj  group.dsk  group.groupproj
DiagnosticUI/: ArrayBot.dsk  DiagUI.cbproj  DiagUI.cpp  DiagUI.dsk  JoyStick.cpp  MainForm.cpp  MainForm.dfm  MainForm.h  Unit1.dfm
Source/: at_pch.h  auto_link_foundation.cpp  postbuild_bcc32.sh  prelink_bcc32.sh
Source/arduino/: atArduino.cbproj  atArduino.cpp  atArduinoClient.cpp  atArduinoClient.h  atArduinoDevice.cpp  atArduinoDevice.h  atArduinoExporter.h  atArduinoIPCServerReceiver.cpp  atArduinoIPCServerReceiver.h  atArduinoMessageProcessor.cpp  atArduinoMessageProcessor.h  atArduinoSerialMessageSender.cpp  atArduinoSerialMessageSender.h  atArduinoServer.cpp  atArduinoServer.h  atArduinoServerCommand.cpp  atArduinoServerCommand.h  atArduinoUtils.cpp  atArduinoUtils.h  atLightsArduino.cpp  atLightsArduino.h  atLightsArduinoClient.cpp  atLightsArduinoClient.h  atSensorsArduino.cpp  atSensorsArduino.h  atSensorsArduinoClient.cpp  atSensorsArduinoClient.h
Source/arraybot/: atABExporter.h  atArrayBot.cpp  atArrayBot.h  atArrayBotIPCReceiver.cpp  atArrayBotIPCReceiver.h  atArrayBotServer.cpp  atArrayBotServer.h  atDataStructures.h  atXYZUnit.cpp  atXYZUnit.h  auto_link.cpp
Source/arraycam/: atArrayCamClient.cpp  atArrayCamClient.h  atArrayCamMessageProcessor.cpp  atArrayCamMessageProcessor.h
Source/barcodereader/: atBarCodeReader.cpp  atBarcodeReader.cbproj  atBarcodeReader.res  atBarcodeReaderExporter.h  atDS457.cpp  atDS457.h
Source/camera/: Dynamic_uc480.cpp  atCameraExporter.h  atCameraServiceThread.cpp  atCameraServiceThread.h  dynamic_uc480.h  uc480.h  uc480class.cpp  uc480class.h
Source/core/: CMakeLists.txt  WatchDogSensor.cpp  WatchDogSensor.h  WatchDogServer.cpp  WatchDogServer.h  atATObject.cpp  atATObject.h  atArrayBotClient.cpp  atArrayBotClient.h  atArrayBotMessageProcessor.cpp  atArrayBotMessageProcessor.h  atArrayBotProtocol.cpp  atArrayBotProtocol.h  atArrayCamProtocol.cpp  atArrayCamProtocol.h  atCore.cpp  atCore.h  atCoreExporter.h  atCorePCH.h  atCounter.cpp  atCounter.h  atCreateImageThumbNailThread.cpp  atCreateImageThumbNailThread.h  atCreateMovieThumbNailThread.cpp  atCreateMovieThumbNailThread.h  atEnvironmentalSensorReader.cpp  atEnvironmentalSensorReader.h  atExceptions.cpp  atExceptions.h  atHDMIStreamerProcess.cpp  atHDMIStreamerProcess.h  atPreset.cpp  atPreset.h  atProcess.cpp  atProcess.h  atResourceManager.cpp  atResourceManager.h  atUtils.cpp  atUtils.h  atVideoCompressorThread.cpp  (+2 more)
Source/core/archive/: atSyncMySQLDataToPostgres.cpp  atSyncMySQLDataToPostgres.h
Source/database/: atDBCredentials.cpp  atDBCredentials.h  atDBExporter.h  atDBUtils.cpp  atDBUtils.h  atDataBaseExporter.h  atDatabase.cbproj  atDatabase.cpp  atDatabase.res  atQueryBuilder.cpp  atQueryBuilder.h  auto_link.cpp
UI/: ArrayBot.cbproj  ArrayBot.cpp  ArrayBot.dsk  ArrayBot.res  ArrayBotPCH1.h  GetTLDInfo.cpp  InitArrayBotThread.cpp  InitArrayBotThread.h  JoyStick.cpp  JoyStickRelated.cpp  MainForm.cpp  MainForm.dfm  MainForm.h  MainForm.vlb  Misc.cpp  ShuttingDownLogic.cpp  UIUtilities.cpp  UIUtilities.h  Unit1.cpp  abInitArrayBotThread.cpp  abInitArrayBotThread.h  abUIDataStructures.h  abUIUtilities.cpp  abUIUtilities.h  abUtilities.cpp  abUtilities.h  amlDataStructures.h  amlUtilities.cpp  amlUtilities.h  auto_link.cpp
UI/forms/: TSplashForm.h  (+12 more)
arduino_server/: ArrayBot.res  ArrayBotPCH1.h  InitArrayBotThread.cpp  InitArrayBotThread.h  MainForm.cpp  MainForm.dfm  MainForm.h  MainForm.vlb  Misc.cpp  ProjectGroup1.groupproj  UIUtilities.cpp  arduino_controller.cbproj  arduino_server.cbproj  arduino_server.cpp
builds/: .gitignore  LargeArrayBotGroup.groupproj  SmallArrayBotGroup.groupproj  all.groupproj
db/: atDB.db  atDBBackup.sql  ddl.txt
docs/: Doxyfile  SequencesCheckList.docx  Thorlabs.MotionControl.C_API.chm  Thorlabs.MotionControl.C_API.chw  index.html - Shortcut.lnk
examples/: CMakeLists.txt
misc/: ArrayBot - Copy.ini  ArrayBot.ini.template  ArrayBot_template.ini  MotorSerials.txt  Sequence.sequence  VariousGraphics.cdr  arraybot.iss  arraybot_release_script.iss  graphics.cdr  release_script.iss  vimtab.reg  wiping.ell
pch/: atapi_pch.h
python/: README.txt
resources/: abResources.cbproj  abResources.cpp  abResources_resources.rc
simulations/: TwoMotors.Simulations
source/: ArrayBot.cbproj  ArrayBot.cpp  ArrayBot.res  ArrayBotPCH1.h  ArrayCamCommunication.cpp  CoreExporter.h  InitArrayBotThread.cpp  InitArrayBotThread.h  JoyStickRelated.cpp  MainForm.cpp  MainForm.dfm  MainForm.h  MainForm.vlb  Misc.cpp  Serial.cpp  Serial.h  ShuttingDownLogic.cpp  StartingUp.cpp  UIUtilities.cpp  UIUtilities.h  WigglerLogic.cpp  abABDataStructures.h  abABObject.cpp  abABObject.h  abAPTDevice.cpp  abAPTDevice.h  abAPTMotor.cpp  abAPTMotor.h  abAbsoluteMove.cpp  abAbsoluteMove.h  abAngleController.cpp  abAngleController.h  abArduinoClient.cpp  abArduinoClient.h  abArduinoDevice.cpp  abArduinoDevice.h  abArduinoIPCServerReceiver.cpp  abArduinoIPCServerReceiver.h  abArduinoMessageProcessor.cpp  abArduinoMessageProcessor.h  (+157 more)
ui/: ArrayBot.cbproj  ArrayBot.cpp  ArrayBot.res  ArrayBotPCH1.h  InitArrayBotThread.cpp  JoyStickRelated.cpp  MainForm.cpp  MainForm.dfm  MainForm.h  MainForm.vlb  Misc.cpp  ShuttingDownLogic.cpp  StartingUp.cpp  UIUtilities.cpp  auto_link.cpp
uic/: ArrayBot.cbproj  ArrayBotPCH1.h  MainForm.cpp  MainForm.vlb  Misc.cpp  ShuttingDownLogic.cpp  UIUtilities.cpp  auto_link.cpp
vcl_forms/: TMLXAboutForm.dfm  TMLXAboutForm.h  TShowFileContentForm.h
vcl_frames/: TMotorFrame.dfm  TRibbonLifterFrame.h  TSequencerButtonsFrame.h  TXYZPositionsFrame.h
wrappers/: CMakeLists.txt
wrappers/Python/: CMakeLists.txt  INSTALL.txt  atfoundation.def  atfoundation.i
(+2631 files in other folders)
